2015-01-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio.el (defclass): Add obsolescence warning for the
	`newname' argument.

	* emacs-lisp/cl-generic.el (cl-generic-define-method): Correctly handle
	introduction of a new dispatch argument.
	(cl--generic-cache-miss): Handle dispatch on an argument which was not
	considered as dispatchable for this method.
	(cl-defmethod): Warn when adding a method to an obsolete generic function.
	(cl--generic-lambda): Make sure it works if cl-lib is not yet loaded.

	* emacs-lisp/eieio-generic.el (eieio--defgeneric-init-form): Use autoloadp.

2015-01-18  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--append-to-alist): Rename from
	`package--add-to-alist'
	Updated docstring due to new name.

2015-01-18  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/cl-extra.el (cl-subseq): Use seq-subseq and fix
	multiple evaluation.  (Bug#19519)

	* emacs-lisp/seq.el (seq-subseq): Throw bad bounding indices
	error.  (Bug#19434)

2015-01-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-macs.el (cl-defstruct): Minor optimization when include
	or print is nil.
	(cl-struct-type-p): New function.

	* emacs-lisp/cl-generic.el: Add support for cl-next-method-p.
	(cl-defmethod): Add edebug spec.
	(cl--generic-build-combined-method): Fix call to
	cl-no-applicable-method.
	(cl--generic-nnm-sample, cl--generic-cnm-sample): New constant.
	(cl--generic-isnot-nnm-p): New function.
	(cl--generic-lambda): Use it to add support for cl-next-method-p.
	(cl-no-next-method, cl-no-applicable-method): Simplify arg list.
	(cl-next-method-p): New function.

2015-01-17  Ulrich Müller  <ulm@gentoo.org>

	* version.el (emacs-repository-get-version): Update docstring.

2015-01-17  Ivan Shmakov  <ivan@siamics.net>

	* url/url-cookie.el (url-cookie-write-file): Let-bind print-length
	and print-level to nil to avoid writing a garbled list.  (Bug#16805)
